--- a/src/Web/ClientApp/src/index.html
+++ b/src/Web/ClientApp/src/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AdvertisingCompany</title>
+    <title>GrowUs</title>
     <base href="/" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/images/logo_transparent.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
